fixes leftpanel collapse issue + removes bottompanel collapse btn

--- a/cdap-ui/app/features/adapters/bottompanel.less
+++ b/cdap-ui/app/features/adapters/bottompanel.less
@@ -21,7 +21,6 @@
 body.theme-cdap.state-adapters-create {
   div.console {
     background-color: white;
-    border-bottom: 1px solid @table-border-color;
     min-height: 40vh;
     overflow-x: hidden;
     .transition(all 0.2s ease);
@@ -55,18 +54,6 @@ body.theme-cdap.state-adapters-create {
         }
         &.active {
           border-bottom: 2px solid @cdap-orange;
-        }
-      }
-      + a.btn {
-        background-color: white;
-        border: 1px solid @table-border-color;
-        color: #666;
-        font-size: 21px;
-        line-height: 25px;
-        margin: 6px 15px 6px 0;
-        padding: 0 6px;
-        &.active, &:active {
-          .box-shadow(none);
         }
       }
     }
