--- a/cdap-ui/app/features/adapters/etlapps.less
+++ b/cdap-ui/app/features/adapters/etlapps.less
@@ -601,7 +601,7 @@ body.theme-cdap.state-adapters-create {
     margin-top: 60px;
   }
   .right-wrapper {
-    margin-left: 290px;
+    border-bottom: 1px solid @table-border-color;
     height: 100vh;
     overflow-y: scroll;
   }
